{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 205,
  "lineage": "01c6e79f-4fd5-471b-43cc-c2984f5a3a32",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "egress-only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-00d2dc1333a4d2ff4",
            "tags": {
              "Name": "Egress_Only_igw-TF"
            },
            "tags_all": {
              "Name": "Egress_Only_igw-TF"
            },
            "vpc_id": "vpc-08f448852d217d232"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "VPCity_eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06471a26bb6c82ec5",
            "association_id": "eipassoc-0c5460172e02bdae9",
            "domain": "vpc",
            "id": "eipalloc-06471a26bb6c82ec5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ae743e63c961de70",
            "private_dns": "ip-10-0-0-130.ec2.internal",
            "private_ip": "10.0.0.130",
            "public_dns": "ec2-54-225-84-191.compute-1.amazonaws.com",
            "public_ip": "54.225.84.191",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AppServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ad2567c9e3d7893",
            "arn": "arn:aws:ec2:us-east-1:132175462706:instance/i-0a519d5ea21e91018",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a519d5ea21e91018",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04819fd5608d386bc",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_ip": "54.166.245.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09a3b5c40f3c5bfd9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05abdd92b1a394a81"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7fb5b7b5d1feb7f",
            "tags": {
              "Name": "AppServer_TF"
            },
            "tags_all": {
              "Name": "AppServer_TF"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05abdd92b1a394a81"
            ]
          },
          "dependencies": [
            "aws_security_group.Alpha",
            "aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ad2567c9e3d7893",
            "arn": "arn:aws:ec2:us-east-1:132175462706:instance/i-03f6582f799a45aec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f6582f799a45aec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc54ad6a11f79adb",
            "private_dns": "ip-10-0-0-23.ec2.internal",
            "private_ip": "10.0.0.23",
            "public_ip": "34.239.167.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e891d9850492388d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02705ee546b0bb798"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009184ceaec4a999e",
            "tags": {
              "Name": "WebServer_TF"
            },
            "tags_all": {
              "Name": "WebServer_TF"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02705ee546b0bb798"
            ]
          },
          "dependencies": [
            "aws_security_group.Bravo",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPCity-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:internet-gateway/igw-0afd69be7122806fc",
            "id": "igw-0afd69be7122806fc",
            "owner_id": "132175462706",
            "tags": {
              "Name": "VPCity_igw-TF"
            },
            "tags_all": {
              "Name": "VPCity_igw-TF"
            },
            "vpc_id": "vpc-08f448852d217d232"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "VPCity-NAT-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06471a26bb6c82ec5",
            "connectivity_type": "public",
            "id": "nat-0f037c948ddd4227a",
            "network_interface_id": "eni-0ae743e63c961de70",
            "private_ip": "10.0.0.130",
            "public_ip": "54.225.84.191",
            "subnet_id": "subnet-009184ceaec4a999e",
            "tags": {
              "Name": "VPCity_nat_gw-TF"
            },
            "tags_all": {
              "Name": "VPCity_nat_gw-TF"
            }
          },
          "dependencies": [
            "aws_internet_gateway.VPCity-igw",
            "aws_subnet.public-subnet",
            "aws_vpc.VPCity",
            "aws_eip.VPCity_eip_nat_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:route-table/rtb-0b86822029efdf363",
            "id": "rtb-0b86822029efdf363",
            "owner_id": "132175462706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-00d2dc1333a4d2ff4",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f037c948ddd4227a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_RT-TF"
            },
            "tags_all": {
              "Name": "Private_RT-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f448852d217d232"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.egress-only",
            "aws_nat_gateway.VPCity-NAT-gw",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:route-table/rtb-0b576acacd9dd1a2b",
            "id": "rtb-0b576acacd9dd1a2b",
            "owner_id": "132175462706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-00d2dc1333a4d2ff4",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afd69be7122806fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT-TF"
            },
            "tags_all": {
              "Name": "Public_RT-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f448852d217d232"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.egress-only",
            "aws_internet_gateway.VPCity-igw",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Database-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0275e23861ecae0f1",
            "route_table_id": "rtb-0b86822029efdf363",
            "subnet_id": "subnet-026f36585809e2754"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress-only",
            "aws_nat_gateway.VPCity-NAT-gw",
            "aws_route_table.private-rt",
            "aws_subnet.database-subnet",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5141efeec3c5d96",
            "route_table_id": "rtb-0b86822029efdf363",
            "subnet_id": "subnet-0b7fb5b7b5d1feb7f"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress-only",
            "aws_nat_gateway.VPCity-NAT-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e79a4a092a4f9a22",
            "route_table_id": "rtb-0b576acacd9dd1a2b",
            "subnet_id": "subnet-009184ceaec4a999e"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress-only",
            "aws_internet_gateway.VPCity-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Spare-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d2a7f13c49d8abd",
            "route_table_id": "rtb-0b86822029efdf363",
            "subnet_id": "subnet-0484f67ceebb24784"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress-only",
            "aws_nat_gateway.VPCity-NAT-gw",
            "aws_route_table.private-rt",
            "aws_subnet.spare-subnet",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:security-group/sg-05abdd92b1a394a81",
            "description": "Allow HTTP and Bravo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05abdd92b1a394a81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Alpha",
            "name_prefix": "",
            "owner_id": "132175462706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Alpha_SG-TF"
            },
            "tags_all": {
              "Name": "Alpha_SG-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f448852d217d232"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bravo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:security-group/sg-02705ee546b0bb798",
            "description": "Allow HTTP, SSH, and Alpha",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02705ee546b0bb798",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP, SSH and Alpha from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP, SSH and Alpha from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05abdd92b1a394a81"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Bravo",
            "name_prefix": "",
            "owner_id": "132175462706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bravo_SG-TF"
            },
            "tags_all": {
              "Name": "Bravo_SG-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f448852d217d232"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Alpha",
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Delta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:security-group/sg-032d4a0a3cd87458f",
            "description": "Allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032d4a0a3cd87458f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP, SSH and Alpha from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Delta",
            "name_prefix": "",
            "owner_id": "132175462706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Delta_SG-TF"
            },
            "tags_all": {
              "Name": "Delta_SG-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f448852d217d232"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:subnet/subnet-026f36585809e2754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.128/26",
            "id": "subnet-026f36585809e2754",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132175462706",
            "tags": {
              "Name": "Database_Subnet-TF"
            },
            "tags_all": {
              "Name": "Database_Subnet-TF"
            },
            "vpc_id": "vpc-08f448852d217d232"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:subnet/subnet-0b7fb5b7b5d1feb7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/25",
            "id": "subnet-0b7fb5b7b5d1feb7f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132175462706",
            "tags": {
              "Name": "Private_Subnet-TF"
            },
            "tags_all": {
              "Name": "Private_Subnet-TF"
            },
            "vpc_id": "vpc-08f448852d217d232"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:subnet/subnet-009184ceaec4a999e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-009184ceaec4a999e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132175462706",
            "tags": {
              "Name": "Public_Subnet-TF"
            },
            "tags_all": {
              "Name": "Public_Subnet-TF"
            },
            "vpc_id": "vpc-08f448852d217d232"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spare-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:subnet/subnet-0484f67ceebb24784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.192/26",
            "id": "subnet-0484f67ceebb24784",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132175462706",
            "tags": {
              "Name": "Spare_Subnet-TF"
            },
            "tags_all": {
              "Name": "Spare_Subnet-TF"
            },
            "vpc_id": "vpc-08f448852d217d232"
          },
          "dependencies": [
            "aws_vpc.VPCity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPCity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132175462706:vpc/vpc-08f448852d217d232",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0ce78715427ea3f94",
            "default_route_table_id": "rtb-04ecd5a13673e3b09",
            "default_security_group_id": "sg-02b3cac1677c9e4ee",
            "dhcp_options_id": "dopt-a3c3f8d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08f448852d217d232",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04ecd5a13673e3b09",
            "owner_id": "132175462706",
            "tags": {
              "Name": "VPCity-TF"
            },
            "tags_all": {
              "Name": "VPCity-TF"
            }
          }
        }
      ]
    }
  ]
}